Work on 4th page, send language data to live view

--- a/PlaygroundBook/PrivateResources/Base.lproj/LiveView.storyboard
+++ b/PlaygroundBook/PrivateResources/Base.lproj/LiveView.storyboard
@@ -134,30 +134,20 @@
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="22V-AE-bAX" userLabel="LanguageView" customClass="ActionView" customModule="Book_Sources">
                                                 <rect key="frame" x="290" y="460" width="70" height="70"/>
                                                 <subviews>
-                                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="-5" translatesAutoresizingMaskIntoConstraints="NO" id="afH-I6-GOz" userLabel="FlagStackView">
-                                                        <rect key="frame" x="5" y="6" width="60" height="58"/>
-                                                        <subviews>
-                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="🇩🇪🇺🇸" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q83-O6-cVU">
-                                                                <rect key="frame" x="0.0" y="0.0" width="60" height="31.5"/>
-                                                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="26"/>
-                                                                <nil key="highlightedColor"/>
-                                                            </label>
-                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="🇷🇴🇫🇷" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dez-CX-ZIz">
-                                                                <rect key="frame" x="0.0" y="26.5" width="60" height="31.5"/>
-                                                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="26"/>
-                                                                <nil key="highlightedColor"/>
-                                                            </label>
-                                                        </subviews>
-                                                    </stackView>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="🇩🇪🇺🇸🇷🇴🇫🇷" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q83-O6-cVU">
+                                                        <rect key="frame" x="5" y="4" width="60" height="62.5"/>
+                                                        <fontDescription key="fontDescription" type="system" weight="light" pointSize="26"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
                                                 </subviews>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <gestureRecognizers/>
                                                 <constraints>
-                                                    <constraint firstItem="afH-I6-GOz" firstAttribute="centerY" secondItem="22V-AE-bAX" secondAttribute="centerY" id="HZp-vl-rVR"/>
                                                     <constraint firstAttribute="height" constant="70" id="IMh-sT-yPA"/>
-                                                    <constraint firstItem="afH-I6-GOz" firstAttribute="centerX" secondItem="22V-AE-bAX" secondAttribute="centerX" id="Ubj-H6-fpt"/>
-                                                    <constraint firstItem="afH-I6-GOz" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="22V-AE-bAX" secondAttribute="leading" constant="1" id="jQo-Cf-LAF"/>
+                                                    <constraint firstItem="Q83-O6-cVU" firstAttribute="centerX" secondItem="22V-AE-bAX" secondAttribute="centerX" id="MZ8-TV-153"/>
+                                                    <constraint firstItem="Q83-O6-cVU" firstAttribute="centerY" secondItem="22V-AE-bAX" secondAttribute="centerY" id="kPv-fq-wXv"/>
                                                     <constraint firstAttribute="width" constant="70" id="uPV-Pm-glS"/>
+                                                    <constraint firstItem="Q83-O6-cVU" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="22V-AE-bAX" secondAttribute="leading" constant="1" id="z43-gg-uO8"/>
                                                 </constraints>
                                                 <connections>
                                                     <outletCollection property="gestureRecognizers" destination="Nkp-2z-7qD" appends="YES" id="X2V-Aj-rTf"/>
@@ -256,6 +246,7 @@
                         <outlet property="emojiActionView" destination="n9t-pn-67c" id="Ijm-Fy-D9J"/>
                         <outlet property="emojiLabel" destination="TFv-UG-AAv" id="wgP-xl-R8f"/>
                         <outlet property="languageActionView" destination="22V-AE-bAX" id="KXp-ld-rmK"/>
+                        <outlet property="languageFlagLabel" destination="Q83-O6-cVU" id="KrO-AX-3h0"/>
                         <outlet property="meetLabel" destination="n74-bG-tkR" id="8Vz-Rd-5J5"/>
                         <outlet property="nameLabel" destination="aed-m1-tCd" id="IbW-Jf-gW8"/>
                         <outlet property="occupationLabel" destination="slN-xk-xIH" id="TjN-4K-h0R"/>
