Complete half of page 5, persist profile images and gradients.

--- a/PlaygroundBook/PrivateResources/Base.lproj/LiveView.storyboard
+++ b/PlaygroundBook/PrivateResources/Base.lproj/LiveView.storyboard
@@ -25,7 +25,7 @@
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mu4-5h-Eqr" userLabel="CardView" customClass="CardView" customModule="Book_Sources">
                                         <rect key="frame" x="86" y="0.0" width="380" height="580"/>
                                         <subviews>
-                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="wX5-7H-o0X" userLabel="ProfileImageView" customClass="ProfileImageView" customModule="Book_Sources">
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="wX5-7H-o0X" userLabel="ProfileImageView" customClass="ProfileImageView" customModule="Book_Sources">
                                                 <rect key="frame" x="125" y="20" width="130" height="130"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" secondItem="wX5-7H-o0X" secondAttribute="height" multiplier="1:1" id="CV6-Kx-3j5"/>
